Closed Bug 364754 Opened 18 years ago Closed 18 years ago

ActiveX control doesn't build with MSVC8 Express

Categories

(Firefox Build System :: General, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: benjamin, Assigned: benjamin)

Details

Attachments

(1 file)

But it could, with a few code changes and an emulation library which I'm going to stick in the mozillabuild system. This mainly fixes problems with the older version of the ATL headers which have for-loop scoping issues, and an issue with a MSVC-specific header which isn't needed.
Comment on attachment 249466 [details] [diff] [review]
Hack around scoping, and use better header, rev. 1

>+#pragma conform(forScope, show)

Did you mean to take this out?  (It's only in the second file.)

I'll trust you on the header -- hopefully it won't break somebody else.

r=dbaron
Attachment #249466 - Flags: review?(dbaron) → review+
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: