Bug 364754 - ActiveX control doesn't build with MSVC8 Express, r=dbaron