embedding/browser/activex/src/common/StdAfx.h
@@ -85,12 +85,23 @@
 // #define _ATL_DEBUG_INTERFACES
 
 // ATL headers
+// The ATL headers that come with the platform SDK have bad for scoping
+#if _MSC_VER >= 1400
+#pragma conform(forScope, push, atlhack, off)
+#endif
+
 #include <atlbase.h>
+
 //You may derive a class from CComModule and use it if you want to override
 //something, but do not change the name of _Module
 extern CComModule _Module;
 #include <atlcom.h>
 #include <atlctl.h>
+
+#if _MSC_VER >= 1400
+#pragma conform(forScope, pop, atlhack)
+#endif
+
 #include <mshtml.h>
 #include <mshtmhst.h>
 #include <docobj.h>
